<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puma</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="action_compose">Compose</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_account">Add account</string>
    <string name="action_post">Publish</string>
    <string name="select_file">Choose file</string>
    <string name="action_clear_cache">Clear cache</string>
    <string name="who_like">%s like this.</string>
    <string name="who_like_and_more">%1$s and %2$s more like this.</string>
    <string name="who_likes">%s likes this.</string>
    <string name="loading_comments_1">Loading comments</string>
    <string name="load_stream_failed">Failed to load the feed</string>
    <string name="load_comments_failed">Failed to load comments</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_user">Welcome %s!</string>
    <string name="insert_webfinger_id">Webfinger ID</string>
    <string name="insert_webfinger_id_desc">Enter your ID on your pump.io site.\nIt looks like an email address,\nwith your nickname then "@"\nthen your server</string>
    <string name="webfinger_sample">username@example.com</string>
    <string name="webfinger_not_valid">Not valid</string>
    <string name="btn_next">Next</string>
    <string name="auth_progress_msg">Please wait, authentication in progress</string>
    <string name="post_complete">Note published</string>
    <string name="post_failed">Doh! Failed to publish the note</string>
    <string name="title">Title</string>
    <string name="title_hint_optional">Title (optional)</string>
    <string name="compose_note_hint">Compose note</string>
    <string name="status">What\'s up?</string>
    <string name="update">Send</string>
    <string name="upload">Upload</string>
    <string name="send_from_account">Send from</string>
    <string name="menu_account">More..</string>
    <string name="public_post">Public Note</string>
    <string name="send_location">Attach location</string>
    <string name="confirm_logout">Are you sure?</string>
    <string name="confirm_share">Do you want to share this note?</string>
    <string name="confirm_delete">Do you want to delete this note?</string>
    <string name="not_favorited">Not favorited</string>
    <string name="trust_and_proceed">Trust anyway and proceed</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="ssl_error">SSL Error</string>
    <string name="error_generic">Sorry, something went wrong..</string>
    <string name="error_generic_detail">Sorry, something went wrong..\n%s</string>
    <string name="oauth_error_user_refused">You did not authorized the connection.\nCan\'t proceed</string>
    <string name="msg_posted">%1$s posted %2$s</string>
    <string name="msg_replied_to">%1$s replied to %2$s</string>
    <string name="msg_favorited">%1$s favorited %2$s</string>
    <string name="msg_liked">%1$s liked %2$s</string>
    <string name="msg_shareded">%1$s shared %2$s</string>
    <string name="msg_shareded_from">%1$s shared %2$s from %3$s</string>
    <string name="msg_followed">%1$s started following %2$s</string>
    <string name="msg_stop_following">%1$s stopped following %2$s</string>
    <string name="msg_favorited_inreplyto">%1$s favorited %2$s in reply to %3$s</string>
    <string name="objecttype_comment">a comment</string>
    <string name="objecttype_image">an image</string>
    <string name="objecttype_note">a note</string>
    <string name="note_shared">Note shared</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_favorited">Note favorited!</string>
    <string name="note_unfavorited">Note unfavorited</string>
    <string name="note_favorite_error">Ops.. an error occurred %s..</string>
    <string name="msg_replies">Replies</string>
    <string name="msg_likes">Likes</string>
    <string name="msg_shares">Shares</string>

    <!-- Dates -->
    <string name="few_seconds">a few seconds ago</string>
    <string name="one_minute_ago">"about a minute ago"</string>
    <string name="minutes_ago">"about %1$s minutes ago"</string>
    <string name="one_hour_ago">"about an hour ago"</string>
    <string name="hours_ago">"about %1$s hours ago"</string>
    <string name="one_day_ago">"about a day ago"</string>
    <string name="days_ago">"about %1$s days ago"</string>
    <string name="one_month_ago">"about a month ago"</string>
    <string name="months_ago">"about %1$s months ago"</string>
    <string name="one_year_ago">"about a year ago"</string>

    <!-- Markdown helpers -->
    <string name="compose_bold_text">B</string>
    <string name="compose_bold_hint">Bold</string>
    <string name="compose_bold_start">**</string>
    <string name="compose_bold_finish">**</string>
    <string name="compose_italic_text">I</string>
    <string name="compose_italic_hint">Italic</string>
    <string name="compose_italic_start">*</string>
    <string name="compose_italic_finish">*</string>
    <string name="compose_bolditalic_text">BI</string>
    <string name="compose_bolditalic_hint">Bold Italic</string>
    <string name="compose_bolditalic_start">***</string>
    <string name="compose_bolditalic_finish">***</string>
    <string name="compose_link_text">~</string>
    <string name="compose_link_hint">Hyperlink</string>
    <string name="compose_link_start">[</string>
    <string name="compose_link_finish">](https://)</string>
    <string name="compose_image_text">[i]</string>
    <string name="compose_image_hint">Image</string>
    <string name="compose_image_start">![</string>
    <string name="compose_image_finish">](https://)</string>
    <string name="compose_h1_text">H1</string>
    <string name="compose_h1_hint">Heading 1</string>
    <string name="compose_h1_start">#</string>
    <string name="compose_h1_finish"></string>
    <string name="compose_h2_text">H2</string>
    <string name="compose_h2_hint">Heading 2</string>
    <string name="compose_h2_start">##</string>
    <string name="compose_h2_finish"></string>
    <string name="compose_h3_text">H3</string>
    <string name="compose_h3_hint">Heading 3</string>
    <string name="compose_h3_start">###</string>
    <string name="compose_h3_finish"></string>
    <string name="compose_list_text">·</string>
    <string name="compose_list_hint">Bullet</string>
    <string name="compose_list_start">*  </string>
    <string name="compose_list_finish"></string>
    <string name="compose_quote_text">\"…\"</string>
    <string name="compose_quote_hint">Quotation</string>
    <string name="compose_quote_start">&gt;</string>
    <string name="compose_quote_finish"></string>
    <string name="compose_code_text">{…}</string>
    <string name="compose_code_hint">Code</string>
    <string name="compose_code_start">``</string>
    <string name="compose_code_finish">``</string>
    <string name="compose_rule_text">-----</string>
    <string name="compose_rule_hint">Rule</string>
    <string name="compose_rule_start">- - -</string>
    <string name="compose_rule_finish"></string>
    <string name="headsup">Head up</string>
    <string name="pending_changes">Do you want to discard this post?</string>

</resources>