<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   <item
		android:id="@+id/action_refresh"
		android:title="@string/action_refresh"
		android:showAsAction="always"
        android:icon="@drawable/navigation_refresh"
	/>
    <item
		android:id="@+id/action_compose"
		android:title="@string/action_compose"
		android:showAsAction="always"
        android:icon="@drawable/new_notice"
	/>
    
     <item
        android:id="@+id/action_clear_cache"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_cache"/>
     
    <item
        android:id="@+id/action_add_account"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_add_account" />
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    
    <!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	 -->

    
</menu>
